# astrodynamics_sim

./: .gitignore  CMakeLists.txt  archive_config  config.csv  main.cpp  visualisation.ipynb
archive/: sim.cpp
archive_configs/: mercury.csv  messed_up_mecury_config.csv  solar_system_and_halleys.csv
include/: cpu_sim.h  cuda_sim.h  file_io.h  opengl_utils.h  renderer.h  run_realtime_sim.h  run_timestep_sim.h  simulation_common.h  simulation_engine.h  types.h
main/: runtime_main.cpp  timestep_main.cpp
shaders/: fragment_debug.glsl
src/: cpu_sim.cpp  cuda_sim.cu  file_io.cpp  main.cpp  opengl_utils.cpp  renderer.cpp  run_realtime_sim.cpp  run_timestep_sim.cpp  simulation_engine.cpp
